--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,16 @@ group = 'test'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+jar {
+    enabled = false
+}
+
+bootJar{
+    archivesBaseName = 'app'
+    archiveFileName = 'app.jar'
+    archiveVersion = "0.0.0"
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
